[package]
name = "stringtree"
version = "0.1.0"
authors = ["Daniel Harrison <daniel.harrison+github@gmail.com>"]

description = "A template system for codegen in Rust"
repository = "https://github.com/danhhz/rsstringtree"
readme = "README.md"
keywords = ["template", "dsl", "codegen", "generation"]
categories = ["template-engine"]
license = "Apache-2.0"

[badges]
travis-ci = { repository = "danhhz/rsstringtree", branch = "master" }
